--- a/src/bitcoin-inflation.ipynb
+++ b/src/bitcoin-inflation.ipynb
@@ -479,6 +479,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the correlation we can see that these variables might not impact each other. Thus we already can conclude that the Inflation Rate **won't be useful to predict.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
@@ -569,7 +576,7 @@
    "metadata": {},
    "source": [
     "Create a Linear Regression instance and then fit it to the linear regression we need.  \n",
-    "**x** is the Ethereum price.  \n",
+    "**x** is the Inflation rate.  \n",
     "**y** is the Bitcoin price.  "
    ]
   },
@@ -654,8 +661,8 @@
     "# Training Sets\n",
     "plt.scatter(x_train, y_train, color=\"red\")\n",
     "plt.plot(x_train, regressor.predict(x_train), color=\"blue\")\n",
-    "plt.title(\"Bitcoin vs Ethereum\")\n",
-    "plt.xlabel(\"Ethereum Closing Price\")\n",
+    "plt.title(\"Bitcoin vs US Inflation Rate\")\n",
+    "plt.xlabel(\"US Inflation Rate\")\n",
     "plt.ylabel(\"Bitcoin Closing Price\")\n",
     "plt.show()\n",
     "\n",
@@ -663,8 +670,8 @@
     "# Test set\n",
     "plt.scatter(x_test, y_test, color=\"red\")\n",
     "plt.plot(x_train, regressor.predict(x_train), color=\"blue\")\n",
-    "plt.title(\"Bitcoin vs Ethereum\")\n",
-    "plt.xlabel(\"Ethereum Closing Price\")\n",
+    "plt.title(\"Bitcoin vs US Inflation Rate\")\n",
+    "plt.xlabel(\"US Inflation Rate\")\n",
     "plt.ylabel(\"Bitcoin Closing Price\")\n",
     "plt.show()\n"
    ]
